@startuml

class Entite #FFB6C1{
- x: int
- y: int
- pv: int
+ Position(int, int)
+ getX(): int
+ getY(): int
+ setX(int)
+ setY(int)
+ attaquer()
+ subirDegats()
}

Entite <|-- Monstre

class Monstre{
+ Monstre(int, int)
+ deplacer(Labyrinthe)
+ estProcheDePerso()
}

Entite <|-- Perso

class Perso{
+ Perso(int, int)
+ etrePresent (int, int)
}

@enduml